--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             position: absolute;
             left: 80%;
         }
+          body {
+            padding-top: 170px;
+            
+        }
         }
     </style>
 </head>
