--- a/dashboard.html
+++ b/dashboard.html
@@ -146,7 +146,7 @@
         <section id="plans">
             <h3>Plans</h3>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12  col-sm-12">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -732,7 +732,9 @@
 
 
 
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
 </body>
 
 </html>
