--- a/dashboard.html
+++ b/dashboard.html
@@ -146,7 +146,7 @@
         <section id="plans">
             <h3>Plans</h3>
             <div class="row">
-                <div class="col-12  col-sm-12">
+                <div class="col-12  col-sm-12 table-responsive">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -304,7 +304,7 @@
 
             <div class="row">
 
-                <div class="col-12">
+                <div class="col-12 table-responsive">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -415,7 +415,7 @@
         <section id="investments">
             <h3>Investment</h3>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 table-responsive">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -516,7 +516,7 @@
         <section id="payment">
             <h3>Payments</h3>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 table-responsive">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -651,7 +651,7 @@
             <h3>Withdraws</h3>
             <div class="row">
 
-                <div class="col-12">
+                <div class="col-12 table-responsive">
                     <table class="table table-striped">
                         <thead>
                             <tr>
