--- a/dashboard.html
+++ b/dashboard.html
@@ -724,7 +724,7 @@
     </main>
 
     <footer class="card">
-        <div style="display: flex; justify-content: space-between; color: #380496; font-weight: 700;" class="p-3">
+        <div style=" display: flex; justify-content: space-around; color: #380496; font-weight: 700;" class="p-3">
             <span style="margin-left: 10%;">Copyright © 2020 Binvest All rights reserved.</span>
             <span>Developed by Alabo Excel</span>
         </div>
